# parol-pygen

./: .gitignore  CHANGELOG.md  EXTRACTION_CHECKLIST.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pypi-smoke.yml  python-ci.yml  testpypi-smoke.yml
scripts/: check-changelog-entry.ps1  release-dry-run.ps1  split-subtree.ps1  verify-split.ps1
src/parol_pygen/: __init__.py  cli.py  diagnostics.py  generator.py  lalr_engine.py  llk_engine.py  loader.py  model.py  parser.py  scaffold.py  scanner_adapter.py  semantic_actions.py  table_compiler.py  validator.py
src/parol_pygen/schemas/: __init__.py
tests/: test_cli.py  test_poc.py  test_scanner_definition.py
