[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parol-pygen"
version = "0.1.0"
description = "PoC Python parser generator consuming parol export JSON"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.0",
  "scnr2",
]

[project.scripts]
parol-pygen = "parol_pygen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parol_pygen = ["schemas/*.json"]
