[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parol-pygen"
version = "0.1.0"
description = "Python parser generator/runtime consuming parol export JSON"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  { name = "parol contributors" },
]
requires-python = ">=3.10"
keywords = ["parser", "generator", "lalr", "llk", "parol"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "jsonschema>=4.21.0",
  "scnr2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/jsinger67/parol"
Repository = "https://github.com/jsinger67/parol"
Issues = "https://github.com/jsinger67/parol/issues"

[project.scripts]
parol-pygen = "parol_pygen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parol_pygen = ["schemas/*.json"]
